@@ -105,77 +105,78 @@
 #define SWITCH_OEMIT 102
 #define SWITCH_OFF 103
 #define SWITCH_ON 104
-#define SWITCH_OUTSIDE 105
-#define SWITCH_OVERRIDE 106
-#define SWITCH_PAGING 107
-#define SWITCH_PANIC 108
-#define SWITCH_PARANOID 109
-#define SWITCH_PARENT 110
-#define SWITCH_PLAYER 111
-#define SWITCH_PLAYERS 112
-#define SWITCH_PORT 113
-#define SWITCH_POWERS 114
-#define SWITCH_PREFIX 115
-#define SWITCH_PRESERVE 116
-#define SWITCH_PRINT 117
-#define SWITCH_PRIVS 118
-#define SWITCH_PURGE 119
-#define SWITCH_QUICK 120
-#define SWITCH_QUIET 121
-#define SWITCH_READ 122
-#define SWITCH_REBOOT 123
-#define SWITCH_RECALL 124
-#define SWITCH_REGEXP 125
-#define SWITCH_REGIONS 126
-#define SWITCH_REGISTER 127
-#define SWITCH_REMIT 128
-#define SWITCH_REMOVE 129
-#define SWITCH_RENAME 130
-#define SWITCH_RESTORE 131
-#define SWITCH_RESTRICT 132
-#define SWITCH_RETROACTIVE 133
-#define SWITCH_ROOM 134
-#define SWITCH_ROOMS 135
-#define SWITCH_RSARGS 136
-#define SWITCH_SAVE 137
-#define SWITCH_SEE 138
-#define SWITCH_SEEFLAG 139
-#define SWITCH_SELF 140
-#define SWITCH_SEND 141
-#define SWITCH_SET 142
-#define SWITCH_SETQ 143
-#define SWITCH_SILENT 144
-#define SWITCH_SKIPDEFAULTS 145
-#define SWITCH_SPEAK 146
-#define SWITCH_SPOOF 147
-#define SWITCH_STATS 148
-#define SWITCH_STATUS 149
-#define SWITCH_SUMMARY 150
-#define SWITCH_TABLES 151
-#define SWITCH_TAG 152
-#define SWITCH_TELEPORT 153
-#define SWITCH_TF 154
-#define SWITCH_THINGS 155
-#define SWITCH_TITLE 156
-#define SWITCH_TRACE 157
-#define SWITCH_TYPE 158
-#define SWITCH_UNCLEAR 159
-#define SWITCH_UNCOMBINE 160
-#define SWITCH_UNFOLDER 161
-#define SWITCH_UNGAG 162
-#define SWITCH_UNHIDE 163
-#define SWITCH_UNMUTE 164
-#define SWITCH_UNREAD 165
-#define SWITCH_UNTAG 166
-#define SWITCH_UNTIL 167
-#define SWITCH_URGENT 168
-#define SWITCH_USEFLAG 169
-#define SWITCH_WHAT 170
-#define SWITCH_WHO 171
-#define SWITCH_WILD 172
-#define SWITCH_WIPE 173
-#define SWITCH_WIZ 174
-#define SWITCH_WIZARD 175
-#define SWITCH_YES 176
-#define SWITCH_ZONE 177
+#define SWITCH_OPAQUE 105
+#define SWITCH_OUTSIDE 106
+#define SWITCH_OVERRIDE 107
+#define SWITCH_PAGING 108
+#define SWITCH_PANIC 109
+#define SWITCH_PARANOID 110
+#define SWITCH_PARENT 111
+#define SWITCH_PLAYER 112
+#define SWITCH_PLAYERS 113
+#define SWITCH_PORT 114
+#define SWITCH_POWERS 115
+#define SWITCH_PREFIX 116
+#define SWITCH_PRESERVE 117
+#define SWITCH_PRINT 118
+#define SWITCH_PRIVS 119
+#define SWITCH_PURGE 120
+#define SWITCH_QUICK 121
+#define SWITCH_QUIET 122
+#define SWITCH_READ 123
+#define SWITCH_REBOOT 124
+#define SWITCH_RECALL 125
+#define SWITCH_REGEXP 126
+#define SWITCH_REGIONS 127
+#define SWITCH_REGISTER 128
+#define SWITCH_REMIT 129
+#define SWITCH_REMOVE 130
+#define SWITCH_RENAME 131
+#define SWITCH_RESTORE 132
+#define SWITCH_RESTRICT 133
+#define SWITCH_RETROACTIVE 134
+#define SWITCH_ROOM 135
+#define SWITCH_ROOMS 136
+#define SWITCH_RSARGS 137
+#define SWITCH_SAVE 138
+#define SWITCH_SEE 139
+#define SWITCH_SEEFLAG 140
+#define SWITCH_SELF 141
+#define SWITCH_SEND 142
+#define SWITCH_SET 143
+#define SWITCH_SETQ 144
+#define SWITCH_SILENT 145
+#define SWITCH_SKIPDEFAULTS 146
+#define SWITCH_SPEAK 147
+#define SWITCH_SPOOF 148
+#define SWITCH_STATS 149
+#define SWITCH_STATUS 150
+#define SWITCH_SUMMARY 151
+#define SWITCH_TABLES 152
+#define SWITCH_TAG 153
+#define SWITCH_TELEPORT 154
+#define SWITCH_TF 155
+#define SWITCH_THINGS 156
+#define SWITCH_TITLE 157
+#define SWITCH_TRACE 158
+#define SWITCH_TYPE 159
+#define SWITCH_UNCLEAR 160
+#define SWITCH_UNCOMBINE 161
+#define SWITCH_UNFOLDER 162
+#define SWITCH_UNGAG 163
+#define SWITCH_UNHIDE 164
+#define SWITCH_UNMUTE 165
+#define SWITCH_UNREAD 166
+#define SWITCH_UNTAG 167
+#define SWITCH_UNTIL 168
+#define SWITCH_URGENT 169
+#define SWITCH_USEFLAG 170
+#define SWITCH_WHAT 171
+#define SWITCH_WHO 172
+#define SWITCH_WILD 173
+#define SWITCH_WIPE 174
+#define SWITCH_WIZ 175
+#define SWITCH_WIZARD 176
+#define SWITCH_YES 177
+#define SWITCH_ZONE 178
 #endif                          /* SWITCHES_H */
